--- a/goit-js-hw-12-countrie1/src/index.html
+++ b/goit-js-hw-12-countrie1/src/index.html
@@ -16,6 +16,7 @@
   <div class="countainer-cauntry js-countainer-cauntry">
     <div id="app"></div>
   </div>
+  <script src="../src/index.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 
 </body>
